new pandas task

--- a/Pandas_exercise.ipynb
+++ b/Pandas_exercise.ipynb
@@ -1276,7 +1276,7 @@
       "source": [
         "# GRADED CELL\n",
         "\n",
-        "users_copy['alpha_3'] = ''  # یا مقدار دلخواه دیگری\n",
+        "users_copy['alpha_3'] = ''\n",
         "users_copy.loc[users_copy.country == 'usa', 'alpha_3'] = 'USA'\n",
         "users_copy['country'] = 'Unknown'\n",
         "\n",
